--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
       "react/prop-types": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
+      "no-unused-expressions": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"]}],
       "import/prefer-default-export": "off",
       "@typescript-eslint/explicit-function-return-type": [
@@ -45,7 +46,7 @@
       ],
       "import/extensions": [
         "error",
-        "ignorePackeges",
+        "ignorePackages",
         {
           "ts": "never",
           "tsx": "never"
